--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -18,5 +20,5 @@
   "devDependencies": {
     "gh-pages": "^1.2.0"
   },
-  "homepage" : "http://ajaxjiang96.github.io/whalesper-website"
+  "homepage": "http://ajaxjiang96.github.io/whalesper-website"
 }
