update website url

--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
   "devDependencies": {
     "gh-pages": "^1.2.0"
   },
-  "homepage": "http://ajaxjiang96.github.io/whalesper-website"
+  "homepage": "http://whalesper.github.io/"
 }
