--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
   "devDependencies": {
     "gh-pages": "^1.2.0"
   },
-  "homepage": "http://whalesper.github.io/"
+  "homepage": "http://whalesper.co"
 }
