--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "^6.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-device-detect": "^1.5.8",
     "react-dom": "^16.4.1",
     "react-ga": "^2.5.3",
     "react-router": "^4.3.1",
