--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ga": "^2.5.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "1.1.4",
     "react-spring": "^5.4.0",
     "react-transition-group": "^2.4.0"
