--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "gh-pages": "^1.2.0",
     "react-a11y": "^1.0.0"
   },
-  "homepage": "https://whalesper.github.io"
+  "homepage": "https://whalesper.co"
 }
