--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -9,5 +9,6 @@ RUN npm run build
 # Copy built app into nginx container
 FROM nginx:1.13.5
 COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
