--- a/default.conf
+++ b/default.conf
@@ -1,29 +1,10 @@
 server {
-    listen 80 default_server;
-    server_name /var/www/example.com;
+    # server_name mydomain.example.com;
+    root /usr/share/nginx/html;
 
-    root /var/www/example.com;
-    index index.html index.htm;      
-
-    location ~* \.(?:manifest|appcache|html?|xml|json)$ {
-      expires -1;
-      # access_log logs/static.log; # I don't usually include a static log
-    }
-
-    location ~* \.(?:css|js)$ {
-      try_files $uri =404;
-      expires 1y;
-      access_log off;
-      add_header Cache-Control "public";
-    }
-
-    # Any route containing a file extension (e.g. /devicesfile.js)
-    location ~ ^.+\..+$ {
-      try_files $uri =404;
-    }
-
-    # Any route that doesn't have a file extension (e.g. /devices)
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
+        add_header   Cache-Control public;
+        expires      1d;
     }
 }
